src/main/scala/com/github/shinharad/part1/note5.txt
scala> import com.github.shinharad.part1._
<console>:11: warning: Unused import
       import com.github.shinharad.part1._
                                         ^
import com.github.shinharad.part1._

scala> Functor[List] compose Functor[Option]
res0: com.github.shinharad.part1.Functor[[X]List[Option[X]]] = com.github.shinharad.part1.Functor$$anon$1@36ec1b92

scala> val xs: List[Option[Int]] = List(Some(1), None, Some(2))
<console>:10: warning: Unused import
       import com.github.shinharad.part1._
                                         ^
xs: List[Option[Int]] = List(Some(1), None, Some(2))

scala> xs.map(_ + 1)
<console>:16: error: type mismatch;
 found   : Int(1)
 required: String
       xs.map(_ + 1)
                  ^
<console>:10: warning: Unused import
       import com.github.shinharad.part1._
                                         ^

scala> res0.map(xs)(_ + 1)
<console>:10: warning: Unused import
       import com.github.shinharad.part1._
                                         ^
res2: List[Option[Int]] = List(Some(2), None, Some(3))
